# mu-rs

./: Cargo.toml  README.md
mu-cli/: Cargo.toml
mu-cli/src/: main.rs  project.rs  util.rs
mu-cli/src/backends/: icp.rs  js.rs  mod.rs
mu-cli/src/backends/templates/icp/function/: Cargo.toml  build.rs
mu-cli/src/backends/templates/icp/function/src/: lib.rs
mu-cli/src/backends/templates/js/vanilla/: counter.js  index.html  main.js  package-lock.json  package.json  vite.config.js
mu-cli/src/project/: config.rs  mod.rs  state.rs
mu-kv/: Cargo.toml  dfx.json
mu-kv/src/: lib.rs
mu-sdk/: Cargo.toml
mu-sdk-macros/: Cargo.toml
mu-sdk-macros/src/: lib.rs
mu-sdk/src/: kv.rs  lib.rs
