[package]
name = "mu-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
handlebars = "6.1.0"
rust-embed = "8.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
