[package]
name = "mu-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mu"
path = "src/main.rs"

[dependencies]
candid = "0.10.10"
candid_parser = "0.1.4"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
handlebars = "6.1.0"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
rust-embed = "8.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
terminal_size = "0.4.0"
toml = "0.8.19"
