[package]
name = "mu-cli"
version = "0.0.1"
edition = "2021"
authors = ["Mu Team <info@muprotocol.io>"]
description = "The Mu SDK for bridging the Web2 and Web3 worlds"
license = "Apache-2.0"
repository = "https://github.com/muprotocol/mu-rs"

[[bin]]
name = "mu"
path = "src/main.rs"

[dependencies]
candid = "0.10.10"
candid_parser = "0.1.4"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.31"
handlebars = "6.1.0"
notify = "7.0.0"
rust-embed = "8.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
terminal_size = "0.4.0"
tokio = { version = "1.41.0", features = [
    "net",
    "process",
    "rt",
    "sync",
    "time",
] }
toml = "0.8.19"
