[package]
name = "mu-kv"
version = "0.0.1"
edition = "2021"
authors = ["Mu Team <info@muprotocol.io>"]
description = "The Mu Key-Value Store"
license = "Apache-2.0"
repository = "https://github.com/muprotocol/mu-rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16"
candid = "0.10"
ic_principal = "0.1.1"
