[package]
name = "{{ name }}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mu-sdk = { git = "https://github.com/muprotocol/mu-rs" }
ic-cdk = "0.16"
candid = "0.10"


[build-dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
